--- a/src/component/IP_AdressPage/Ip_AddressPage.styles.scss
+++ b/src/component/IP_AdressPage/Ip_AddressPage.styles.scss
@@ -1,122 +1,107 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+.subcontainer {
+  background-image: url("../../images/pattern-bg-desktop.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+  position: relative;
+}
 
-    
-    .subcontainer{
-       
-        background-image: url('../../images/pattern-bg-desktop.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 300px;
-        position: relative;
-    }
-    
-    .text{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        padding: 10px;
-       
+.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 10px;
+}
+.searchbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.input-text {
+  border-style: none;
+  border-radius: 10px 0px 0px 10px;
+  width: 400px;
+  height: 50px;
+  padding: 10px;
+}
+.button {
+  width: 50px;
+  height: 52px;
+  background-color: black;
+  border-radius: 0px 10px 10px 0px;
+}
+.ip-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-top: 100px;
+  gap: 80px;
+  background-color: white;
+  width: 80%;
+  height: 150px;
+  // margin-left: 140px;
+  border-radius: 20px;
+  padding: 10px;
+  position: absolute;
+  top: 80%;
+  left: 150px;
+  z-index: 2;
+}
+.vertical-line {
+  width: 2px;
+  border: 1px solid rgb(141, 139, 139);
+  height: 70px;
+}
 
-    }
-    .searchbar{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top:50px;
-    }
-    .input-text{
-        border-style: none;
-        border-radius: 10px 0px 0px 10px;
-        width: 400px;
-        height: 50px;
-        padding: 10px;
-    }
-    .button{
-        width: 50px;
-        height: 52px;
-        background-color: black;
-        border-radius: 0px 10px 10px 0px;
+.map-container {
+  margin-top: 120px;
+  width: 100%;
+  overflow: hidden;
+  height: 500px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 1;
+}
 
-    }
-    .ip-info{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // margin-top: 100px;
-        gap: 80px;
-        background-color: white;
-        width: 80%;
-        height: 150px;
-        // margin-left: 140px;
-        border-radius: 20px;
-        padding: 10px;
-        position: absolute;
-        top:80%;
-        left: 150px;
-        z-index: 2;
-    }
-    .vertical-line{
-        width: 2px;
-        border: 1px solid rgb(141, 139, 139);
-        height: 70px;
+@media screen and (max-width: 800px) {
+  .ip-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 
-    }
-
-    .map-container{
-        margin-top: 120px;
-        width: 100%;
-        overflow: hidden;
-        height: 500px;
-        border-radius: 4px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        position: relative;
-        z-index: 1;
-
-    }
-    
- 
-
-
-    
-@media screen and (max-width: 500px){
-    .ip-info{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        height: 300px;
-        width: 300px;
-        position: absolute;
-        right: 10px;
-        left: 50px;
-
-        padding: 5px;
-        font-size: 10px;
-        
-    }
-    .vertical-line{
-        display: none;
-    }
-    p{
-        display: flex;
-        justify-content: center;
-    }
-    .container{
-        width: 100vw;
-        height: 100vh;
-    }
-    .searchbar{
-        width: 60%;
-        display: flex;
-        margin-left: 100px;
-        
-    }
-    
+    padding: 5px;
+    font-size: 10px;
+  }
+  .vertical-line {
+    display: none;
+  }
+  p {
+    display: flex;
+    justify-content: center;
+  }
+  .container {
+    width: 100vw;
+    height: 100vh;
+  }
+  .searchbar {
+    width: 60%;
+    display: flex;
+    margin-left: 100px;
+  }
 }
